--- a/src/sass/theme/parts/layout-components/_widgets.scss
+++ b/src/sass/theme/parts/layout-components/_widgets.scss
@@ -15,6 +15,7 @@
 .home-widgets .flex-form-group-wrapper input[type=text],
 .home-widgets .flex-form-group label i {
 	border: 1px solid #ccc;
+  width: 400%; // This is a hack!
 }
 .home-widgets .flex-form-group label i {
 	border: 1px solid #ccc;
